--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,9 +7,9 @@
 
     /*========== Colors ==========*/
     /*Color mode HSL(hue, saturation, lightness)*/
-    --first-color: hsl(228, 66%, 53%);
+    --first-color: hsl(284, 92%, 40%);
     --first-color-alt: hsl(228, 66%, 47%);
-    --first-color-light: hsl(228, 62%, 59%);
+    --first-color-light: hsl(25, 95%, 57%);
     --first-color-lighten: hsl(228, 100%, 97%);
     --second-color: hsl(25, 83%, 53%);
     --title-color: hsl(228, 57%, 28%);
@@ -305,11 +305,30 @@ body.dark-theme {
 }
 
 /*=============== HOME ===============*/
+/*===============
 .home {
     background: linear-gradient(170deg, hsl(0, 0%, 22%) 0%, hsl(0, 0%, 6%) 30%);
     padding-bottom: 0;
 }
-
+.home {
+    background: linear-gradient(170deg, hsl(0, 0%, 22%) 0%, hsl(0, 0%, 6%) 30%);
+    padding-bottom: 0;
+}
+.home {
+    background: linear-gradient(170deg, hsl(0, 0%, 22%) 0%, hsl(0, 0%, 6%) 30%);
+    padding-bottom: 0;
+}
+===============*/
+.home {
+    background: linear-gradient(170deg, hsl(0, 28%, 81%) 0%, hsl(284, 92%, 40%) 30%);
+    padding-bottom: 0;
+}
+/*===============
+.home {
+    background: linear-gradient(170deg, hsl(0, 0%, 22%) 0%, hsl(0, 0%, 6%) 30%);
+    padding-bottom: 0;
+}
+===============*/
 .home__container {
     padding-top: 4rem;
     row-gap: 3.5rem;
@@ -399,11 +418,25 @@ body.dark-theme {
     display: inline-flex;
     align-items: flex-end;
     bottom: -1.5rem;
-    box-shadow: 0 16px 32px hsla(228, 66%, 25%, 0.25);
+    box-shadow: 0 16px 32px hsla(278, 95%, 49%, 0.318);
 }
 
 /*=============== BUTTON ===============*/
 
+.button {
+    display: inline-block;
+    background: linear-gradient(101deg, hsl(25, 86%, 56%), hsl(25, 95%, 57%));
+    color: #fff;
+    padding: 14px 28px;
+    border-radius: 0.5rem;
+    font-size: var(--normal-font-size);
+    font-weight: var(--font-medium);
+    box-shadow: 0 4px 8px hsla(22, 75%, 39%, 0.25);
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+/*=============== 
 .button {
     display: inline-block;
     background: linear-gradient(101deg, hsl(228, 66%, 53%), hsl(228, 66%, 47%));
@@ -416,6 +449,7 @@ body.dark-theme {
     transition: 0.3s;
     cursor: pointer;
 }
+===============*/
 
 .button:hover {
     box-shadow: 0 4px 12px hsla(228, 66%, 45%, 0.25);
